syntax = "proto3";
package payment;

service PaymentService {
  rpc Prepare(PrepareRequest) returns (PrepareResponse);
  rpc Commit(CommitRequest)   returns (CommitResponse);
  rpc Abort(AbortRequest)     returns (AbortResponse);
}

message PrepareRequest {
  string order_id = 1;
  double amount   = 2;
}
message PrepareResponse {
  bool   ready   = 1;
  string message = 2;
}

message CommitRequest {
  string order_id = 1;
}
message CommitResponse {
  bool   success = 1;
  string message = 2;
}

message AbortRequest {
  string order_id = 1;
}
message AbortResponse {
  bool   aborted = 1;
  string message = 2;
}
